


syntax = "proto3";
package grpc;
service RAFT {
    // Sends a greeting
 // rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply) {}
    rpc L2SAppendEntries (AppendEntriesArgs) returns (L2SAppendEntriesReply){};
    rpc S2FAppendEntries (AppendEntriesArgs) returns (AppendEntriesReply){};



}

message AppendEntriesArgs {
    bytes log = 1;
}

message AppendEntriesReply{
    int32 Term = 1;             
    bool Success = 2;       
    int32 ConflictIndex  = 3;
    int32 ConflictTerm  = 4;
}

message L2SAppendEntriesReply {
    //string message = 1;
    int32 Term = 1;             
    bool Success = 2;       
    int32 ConflictIndex  = 3;
    int32 ConflictTerm  = 4;
    int32 Nums = 5;
}